--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/nabezokodaikon/pcars2-udp-app/issues"
   },
-  "homepage": "https://github.com/nabezokodaikon/pcars2-udp-app#readme"
+  "homepage": "https://github.com/nabezokodaikon/pcars2-udp-app#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0"
+  }
 }
