--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Telemetry display for Project Cars 2",
   "main": "contents/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "./node_modules/.bin/webpack --config webpack.config.babel.js"
   },
   "repository": {
     "type": "git",
@@ -18,14 +18,16 @@
   "homepage": "https://github.com/nabezokodaikon/pcars2-udp-app#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.7.1"
   },
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
-  },
-  "scripts": {
-    "build" "./node_modules/.bin/webpack --config webpack.config.babel.js"
   }
 }
