--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack": "^3.7.1"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
