--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "style-loader": "^0.19.0",
     "webpack": "^3.7.1"
   },
