--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack": "^3.7.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
