Add default actor type setting

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,10 @@
 akka {
   jvm-exit-on-fatal-error = false
+  actor {
+    default-mailbox {
+      mailbox-type = "akka.dispatch.SingleConsumerOnlyUnboundedMailbox"
+    }
+  }
   http {
     server {
       remote-address-header = on
