--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "prettier": "^1.8.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1"
   },
