--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "contents/index.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack --config webpack.debug.config.babel.js",
-    "product": "./node_modules/.bin/webpack --config webpack.product.config.babel.js"
+    "product": "./node_modules/.bin/webpack --config webpack.product.config.babel.js",
+    "prettier": "./node_modules/.bin/prettier --config ./.prettierrc --write ./public/src/**/*.js && ./node_modules/.bin/prettier --config ./.prettierrc --write ./public/src/**/*.jsx && ./node_modules/.bin/prettier --config ./.prettierrc --write ./public/src/**/*.css"
   },
   "repository": {
     "type": "git",
