--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,8 +15,8 @@ akka {
 
 app {
   server {
-    ip-address = 192.168.1.5
+    ip-address = 0.0.0.0 
     port = 9000
   }
-  debug = false
+  debug = true 
 }
