--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "file-loader": "^1.1.11",
     "prettier": "^1.11.1",
     "style-loader": "^0.20.3",
-    "webpack": "^4.5.0"
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.3.0"
   },
   "dependencies": {
     "prop-types": "^15.6.1",
